# khala

./: .clang-format  .gitignore  CMakeLists.txt  README.md  lsan_suppressions.txt
.github/workflows/: fedora.yml  ubuntu.yml  windows-release.yml  windows.yml
commands/: format_json.ini  generate_password.ini  rm.ini
src/: actions.cpp  actions.h  bench_simd.cpp  config.cpp  config.h  fuzzy.cpp  fuzzy.h  indexer.cpp  indexer.h  indexer_benchmark.cpp  lastwriterwinsslot.h  launcher.cpp  launcher_streaming.cpp  logger.cpp  logger.h  packed_strings.cpp  packed_strings.h  parallel.h  ranker.cpp  ranker.h  ringbuffer.h  str.cpp  str.h  streamingindex.cpp  streamingindex.h  types.h  ui.cpp  ui.h  ui_directwrite.cpp  ui_directwrite.h  utility.cpp  utility.h  utility_linux.cpp  utility_win32.cpp  vector.c  vector.h  window.h  window_cairo_impl.cpp  window_wayland.cpp  window_win32.cpp  (+3 more)
themes/: default-dark.ini  default-light.ini  gruvbox-dark.ini  nord.ini  solarized-light.ini  tomorrow-night-eighties.ini
